--- a/src/components/PlayerCard/style.module.scss
+++ b/src/components/PlayerCard/style.module.scss
@@ -18,12 +18,13 @@
     .name {
       margin-top: 0.5rem;
       font-size: 1.2rem;
-      color: var(--dark-700);
+      color: #fff;
     }
   
     .position {
       margin-top: 0.25rem;
-      color: var(--gray-500);
+      color: var(--green-900);
+      font-weight: bold;
     }
   }
   
