--- a/src/pages/table/styles.module.scss
+++ b/src/pages/table/styles.module.scss
@@ -14,7 +14,7 @@
   }
 
 .gameTable {
-    width: 100%;
+    max-width: 100%;
     border-collapse: collapse;
     border: 1px solid #ddd;
     margin-top: 20px;
